[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = []
description = "Chaos is next-generation cloud storage solution designed to support a myriad of different workflows"
edition = "2021"
homepage = "https://scattered-systems.github.io/chaos/"
keywords = []
license = "MIT"
name = "chaos-sdk"
readme = "README.md"
repository = "https://github.com/scattered-systems/chaos"
version = "0.1.7"

[[bin]]
bench = false
name = "chaos"

[features]
default = []
full = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
scsys = { features = ["full"], version = ">=0.1.4" }

[dev-dependencies]