[workspace]
default-members = [
    "bin/app",
    "lib/sdk"
]

members = [
    "bin/app",
    "bin/rpc",
    "lib/sdk"
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = 'unwind'
rpath = false
opt-level = 0
overflow-checks = true
split-debuginfo = 'packed' # Platform specific

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = 'unwind'
rpath = false
opt-level = 'z'
overflow-checks = false
split-debuginfo = 'off' # Platform specific