[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <jo3mccain@scattered-systems.com>"]
description = "A lightweight IPFS client designed for an optimized, end-user experience"
edition = "2021"
keywords = ["blockchain", "cloud-storage", "decentralized", "scsys"]
license = "MIT"
name = "disarray"
readme = "README.md"
repository = "https://github.com/scattered-systems/chaos.git"
version = "0.1.4" # TODO - Update crate version

[features]
default = ["core"]
core = ["disarray-core"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "disarray"
path = "src/lib.rs"
test = false

[[bin]]
bench = false
name = "chaos"
path = "src/main.rs"
test = false

[dependencies]
acme = { features = ["full"], version = "0.1.25" }
blake2 = "0.10.4"
chrono = "0.4.19"
clap = { features = ["derive"], version = "3.2.5" }
config = "0.13.1"
futures = "0.3.21"
glob = "0.3.0"
hex = "0.4.3"
libp2p = { features = ["dns-tokio", "tcp-tokio"], version = "0.45.1" }
log = "0.4.17"
once_cell = "1.12.0"
pretty_env_logger = "0.4.0"
serde = { features = ["derive"], version = "1.0.137" }
serde_json = "1.0.81"
sha2 = "0.10.2"
tokio = { features = ["full"], version = "1.18.2" }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[dependencies.disarray-core]
optional = true
path = "../crates/core"
version = "0.1.0"

[net]
git-fetch-with-cli = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false