[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <jo3mccain@scattered-systems.com>"]
description = "A lightweight IPFS client designed for an optimized, end-user experience"
edition = "2021"
keywords = ["blockchain", "cloud-storage", "decentralized", "scsys"]
license = "MIT"
name = "chaos"
readme = "README.md"
repository = "https://github.com/scattered-systems/chaos.git"
version = "0.1.5" # TODO - Update crate version

[features]
core = ["disarray"]
default = ["core"]

[[bin]]
bench = false
name = "chaos"
path = "src/main.rs"
test = false

[dependencies]
clap = { features = ["derive"], version = "3.2.5" }
config = "0.13.1"
glob = "0.3.0"
serde = { features = ["derive"], version = "1.0.137" }

[dependencies.acme]
features = ["full"]
optional = false
version = ">=0.1.25"

[dependencies.disarray]
optional = true
version = ">=0.1.3"