[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03), Scattered-Systems (https://github.com/scattered-systems)"]
categories = []
description = "chaos"
edition = "2021"
homepage = "https://github.com/scattered-systems/chaos/wiki"
keywords = ["cloud", "data", "decentralized", "scsys", "storage"]
license = "Apache-2.0"
name = "chaos-bin"
readme = "README.md"
repository = "https://github.com/scattered-systems/chaos"
version = "0.1.7"

[[bin]]
name = "chaos"
path = "src/main.rs"

[build-dependencies]

[dev-dependencies]

[dependencies]
axum = { features = ["headers", "http2", "ws"], version = "0.6.1" }
clap = { features = ["derive"], version = "4.0.29" }
futures = "0.3.25"
glob = "0.3.0"
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.23" }
reqwest = { features = ["json", "rustls-tls", "stream"], version = "0.11.12" }
scsys = { features = ["full"], version = "0.1.36" }
serde = { features = ["derive"], version = "1.0.149" }
serde_json = "1.0.89"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["full"], version = "1.21.2" }
tokio-stream = "0.1.11"
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.3.5" }
tracing = "0.1.36"
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }
utoipa = { features = ["axum_extras", "serde_json", "serde_yaml"], version = "3.1.1" }
utoipa-swagger-ui = { features = ["axum"], version = "3.0.1" }

chaos-sdk = { features = [], path = "../lib/sdk", version = "0.1.7" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
