[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems<jo3mccain@scattered-systems.com>"]
description = "A decentralized cloud storage toolkit"
edition = "2021"
license = "MIT"
name = "contained"
repository = "https://github.com/scattered-systems/chaos.git"
version = "0.1.0"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
name = "contained"
path = "src/lib.rs"
test = true

[[test]]
name = "simple"
path = "tests/simple.rs"

[dependencies]

