[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <jo3mccain@scattered-systems.com>"]
description = "A lightweight IPFS client designed for an optimized, end-user experience"
edition = "2021"
license = "MIT"
name = "chaos"
repository = "https://github.com/scattered-systems/chaos/code/chaos"
version = "0.1.2"

[dependencies]
acme = "0.1.11"
blake2 = "0.10.4"
chrono = "0.4.19"
clap = "0.11.0"
config = "0.13.1"
futures = "0.3.21"
glob = "0.3.0"
hex = "0.4.3"
libp2p = { features = ["dns-tokio", "gossipsub", "mdns", "tcp-tokio"], version = "0.45.1" }
log = "0.4.17"
once_cell = "1.12.0"
pretty_env_logger = "0.4.0"
serde = { features = ["derive"], version = "1.0.137" }
serde_json = "1.0.81"
sha2 = "0.10.2"
tokio = { features = ["full"], version = "1.18.2" }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

