[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <jo3mccain@scattered-systems.com>"]
description = "Supporting crate for Chaos, a decentralized storage solution"
edition = "2021"
license = "MIT"
name = "disarray-core"
readme = "README.md"
repository = "https://github.com/scattered-systems/chaos"
version = "0.1.1"

[features]
default = []

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[[test]]
name = "test"
path = "tests/test.rs"
test = true

[dependencies]
bson = { features = ["chrono-0_4", "serde_with"], version = "2.3.0" }
disaronno = { features = ["macros"], version = "0.1.5" }
serde = { features = ["derive"], version = "1.0.137" }
serde_json = "1.0.81"