[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <jo3mccain@scattered-systems.com>"]
description = "Supporting crate for Chaos, a unique cloud storage solution focused on security"
edition = "2021"
license = "MIT"
name = "disarray-core"
readme = "README.md"
repository = "https://github.com/scattered-systems/chaos"
version = "0.1.4" # TODO - Update crate version

[features]
default = []

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[[test]]
name = "test"
path = "tests/test.rs"
test = true

[dependencies]
bson = { features = ["chrono-0_4", "serde_with"], version = "2.3.0" }
serde = { features = ["derive"], version = "1.0.137" }
serde_json = "1.0.81"

[dev-dependencies]
acme = "0.1.25"
disarray = { path = "../../app", version = "0.1.4" }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
