[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = []
description = "chaos-ipfs"
edition = "2021"
homepage = "https://github.com/Scattered-Systems/chaos/wiki"
keywords = []
license = "Apache-2.0"
name = "chaos-ipfs"
repository = "https://github.com/scattered-systems/chaos"
version = "0.1.7"

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
ipfs = { git = "https://github.com/FL03/rust-ipfs" }
scsys = { features = ["full"], version = "0.1.36" }
serde = { features = ["derive"], version = "1.0.149" }
serde_json = "1.0.89"
tokio = { features = ["full"], version = "1.23.0" }
tokio-stream = "0.1.11"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]