[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = []
description = "Chaos is next-generation cloud storage solution designed to support a myriad of different workflows"
edition = "2021"
homepage = "https://scattered-systems.github.io/chaos/"
keywords = []
license = "MIT"
name = "chaos-sdk"
readme = "https://github.com/scattered-systems/chaos/#README.md"
repository = "https://github.com/scattered-systems/chaos"
version = "0.1.7"

[features]
default = ["core", "ipfs", "storj"]
full = ["core", "arweave", "ipfs", "storj"]

core = []

arweave = ["arloader"]
ipfs = ["ipfs/default"]
storj = ["uplink"]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
arloader = { optional = true, version = "0.1.63" }
ipfs = { git = "https://github.com/rs-ipfs/rust-ipfs", optional = true }
scsys = { features = ["full"], version = "0.1.17" }
serde = { features = ["derive"], version = "1.0.145" }
serde_json = "1.0.85"
tokio = { features = ["full"], version = "1.21.2" }
tokio-stream = "0.1.10"
uplink = { optional = true, version = "0.3.0" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]