[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = []
description = "Chaos is next-generation cloud storage solution designed to support a myriad of different workflows"
edition = "2021"
homepage = "https://github.com/Scattered-Systems/chaos/wiki"
keywords = []
license = "MIT"
name = "chaos-sdk"
readme = "README.md"
repository = "https://github.com/scattered-systems/chaos"
version = "0.1.7"

[features]
default = ["core", "ipfs", "s3"]
full = ["core", "arweave", "ipfs"]

core = []

arweave = ["arloader"]
ipfs = ["ipfs/default"]
s3 = ["rust-s3/default"]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
arloader = { optional = true, version = "0.1.63" }
ipfs = { git = "https://github.com/rs-ipfs/rust-ipfs", optional = true }
rust-s3 = "0.32.3"
scsys = { features = ["full"], version = "0.1.17" }
serde = { features = ["derive"], version = "1.0.145" }
serde_json = "1.0.85"
tokio = { features = ["full"], version = "1.21.2" }
tokio-stream = "0.1.10"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]